# 24openClaw

./: .env.example  .gitignore  Cargo.toml  IMPLEMENTATION_GUIDE.md  OpenClaw_AI_Trading_Guide1.md  PROMPT_COMPLETE_PAIRS_TRADING.md  Pairs_Trading_Complete_Guide.md  README.md  TRADINGCLAW_MFT_SYSTEM_v3_Final_1.md  TRADINGCLAW_PHASE0_COMPLETE_GUIDE.md  ZEROCLAW_MFT_SYSTEM_v3_Final (1).md  ZEROCLAW_PHASE0_COMPLETE_GUIDE.md  data_format_standard.md  docker-compose.yml  ecosystem.config.js  extract_code.py  implementation_plan.md  implementation_plan.md.resolved  main.py  package-lock.json  package.json  requirements.txt  supabase_schema.sql  test-okx.ts  test-scan.ts  test_live.py  tsconfig.json
.agent/skills/clawbot-account/: SKILL.md
.agent/skills/clawbot-execute/: SKILL.md
.agent/skills/clawbot-market-data/: SKILL.md
.agent/skills/clawbot-news/: SKILL.md
.agent/skills/clawbot-notify/: SKILL.md
.agent/skills/clawbot-risk/: SKILL.md
.claude/: settings.local.json
bins/scanner/: Cargo.toml
bins/scanner/src/: main.rs
config/: scanner.toml
crates/common/: Cargo.toml
crates/common/src/: config.rs  types.rs
crates/network/: Cargo.toml
crates/network/src/: binance.rs  bybit.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: cos.rs  lib.rs  report.rs  universe.rs
crates/signals/: Cargo.toml
crates/signals/src/: cross_corr.rs  lib.rs  microprice.rs  mlofi.rs  obi.rs  spread.rs  tfi.rs  trade_intensity.rs  vamp.rs  volatility.rs
data/: cycle_state.json
db/: init.sql  migrate_v2.sql  migrate_v3.sql
docs/: AI_DECISION_LOGIC.md  ARCHITECTURE.md  COST_ANALYSIS.md  DATABASE_SCHEMA.md  DATA_COLLECTION_DEEP_DIVE.md  DATA_SOURCES.md  DATA_SOURCES_COMPLETE.md  DEPLOYMENT.md  IMPROVEMENTS.md  INDUSTRY_COMPARISON.md  NEWS_SCRAPING.md  PROJECT_REFERENCE.md  SCALPING_OPTIMIZATION.md  WORKFLOW.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Dashboard.tsx  ScannerTab.tsx
frontend/src/components/common/: SharedUI.tsx
frontend/src/features/dashboard/: DashboardPage.tsx
frontend/src/features/scanner/components/: ScannerTable.tsx
frontend/src/lib/: api.ts
memory/: MEMORY.md
server/: Dockerfile  app.py  requirements.txt
server/engine/: exchange.py  executor.py  models.py  monitor.py  reconciliation.py  scanner.py  stats.py
src/: __init__.py  index.ts  types.ts
src/ai/: brain.py  prompts.py
src/api/: routes.ts
src/brain/: __init__.py  ai_brain.py  position_analyzer.py
src/brain/prompts/: trading_prompt.md
src/collectors/: __init__.py  binance_collector.py  news_collector.py  news_scraper.py  onchain_collector.py
src/core/: config-manager.ts  dedup.ts  engine.py  executor.ts  indicators.ts  lifecycle.ts  reconciliation.ts  safe-zone.ts  scanner.ts  state-manager.ts  validator.ts
src/data/: binance_rest.py  candle_store.py  news_fetcher.py
src/database/: __init__.py  repository.py  supabase_client.py
src/exchange/: okx-client.ts
src/execution/: order_manager.py  position_tracker.py
src/executor/: __init__.py  binance_trader.py
src/processors/: __init__.py  aggregator.py  sentiment_processor.py  technical_processor.py
src/strategy/: indicators.py  regime.py
src/utils/: __init__.py  cache.py  config.py  logger.py  notifier.py  telegram_notifier.py
tests/: indicators.test.ts  safe-zone.test.ts
