[package]
name = "tradingclaw-scanner-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
tradingclaw-common = { path = "../../crates/common" }
tradingclaw-network = { path = "../../crates/network" }
tradingclaw-signals = { path = "../../crates/signals" }
tradingclaw-scanner = { path = "../../crates/scanner" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
