[package]
name = "tradingclaw-network"
version = "0.1.0"
edition = "2021"

[dependencies]
tradingclaw-common = { path = "../common" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
