[package]
name = "zeroclaw-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
zeroclaw-common = { path = "../common" }
zeroclaw-network = { path = "../network" }
zeroclaw-signals = { path = "../signals" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
