[package]
name = "tradingclaw-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
tradingclaw-common = { path = "../common" }
tradingclaw-network = { path = "../network" }
tradingclaw-signals = { path = "../signals" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
